--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -134,26 +134,21 @@ jobs:
         id: prepare_payload
         env:
           #NEW_VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
-          NEW_VERSION: "11.0.9"
+          NEW_VERSION: "11.0.10"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
           THIS_RELEASE_NOTES: ${{ steps.fetch_release.outputs.RELEASE_NOTES }}
-          #USERGUIDE_FILE_ID: "657c7af4003a79.72655930.0"
         run: |
           # Read the JSON template and replace placeholders with actual values
           cp .github/workflows/payload-template.json updated-payload.json
           
-          # # Replace single quotes with escaped single quotes
-          #escaped_notes=$(echo "${THIS_RELEASE_NOTES}" | sed "s/'/\\\\'/g")
-          escaped_notes="What's Changed\nNew Features 💎\n[ECP-9249] Support new Ideal payment flow by @candemiralp in #2648\nOther Changes 🖇️\n[ECP-9223-v8] Update Apple Pay domain association file download URL by @candemiralp in #2641\n[ECP-8805-v8] Allow configuring Adyen API credentials on store level by @SushmitaThakur in #2661\nRelease 8.23.0 by @khushboo-singhvi in #2676\nFull Changelog: 8.22.9...8.23.0\nAdyen Web components version - v5.65.0"
-          # Print the result
-          echo "$escaped_notes"
+          THIS_RELEASE_NOTES="What's Changed\nNew Features 💎\n[ECP-9249] Support new Ideal payment flow by @candemiralp in #2648\nOther Changes 🖇️\n[ECP-9223-v8] Update Apple Pay domain association file download URL by @candemiralp in #2641\n[ECP-8805-v8] Allow configuring Adyen API credentials on store level by @SushmitaThakur in #2661\nRelease 8.23.0 by @khushboo-singhvi in #2676\nFull Changelog: 8.22.9...8.23.0\nAdyen Web components version - v5.65.0"
           
           # Replace placeholders with actual values
           sed -i "s/VERSION/${NEW_VERSION}/g" updated-payload.json
           sed -i "s/FILE_UPLOAD_ID/${FILE_UPLOAD_ID}/g" updated-payload.json
           
           # sed -i "s/USERGUIDE_FILE_ID/${USERGUIDE_FILE_ID}/g" updated-payload.json
-          # sed -i "s|RELEASE_NOTES|$escaped_notes|" updated-payload.json
+          # sed -i "s|RELEASE_NOTES|$THIS_RELEASE_NOTES|" updated-payload.json
 
           # Update the JSON payload with the release notes
           jq --arg notes "$THIS_RELEASE_NOTES" '.[0].release_notes = $notes' updated-payload.json > updated-payload.tmp && mv updated-payload.tmp updated-payload.json
