--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -134,7 +134,7 @@ jobs:
         id: prepare_payload
         env:
           #NEW_VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
-          NEW_VERSION: "11.0.10"
+          NEW_VERSION: "11.0.11"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
           THIS_RELEASE_NOTES: ${{ steps.fetch_release.outputs.RELEASE_NOTES }}
         run: |
@@ -146,12 +146,27 @@ jobs:
           # Replace placeholders with actual values
           sed -i "s/VERSION/${NEW_VERSION}/g" updated-payload.json
           sed -i "s/FILE_UPLOAD_ID/${FILE_UPLOAD_ID}/g" updated-payload.json
+  
+          # Step 1: Prepare the release notes
+          echo "$THIS_RELEASE_NOTES" > temp_release_notes.txt
           
-          # sed -i "s/USERGUIDE_FILE_ID/${USERGUIDE_FILE_ID}/g" updated-payload.json
-          # sed -i "s|RELEASE_NOTES|$THIS_RELEASE_NOTES|" updated-payload.json
-
-          # Update the JSON payload with the release notes
+          # Step 2: Remove specific line and emojis
+          sed -e '/<!-- Release notes generated using configuration in .github\/release.yml at main -->/d' \
+              -e 's/💎//g' \
+              -e 's/🖇️//g' \
+              temp_release_notes.txt > cleaned_release_notes.txt
+          
+          # Step 3: Read the cleaned content into a variable
+          THIS_RELEASE_NOTES=$(cat cleaned_release_notes.txt)
+          
+          # Step 4: Update the JSON file with the cleaned release notes
           jq --arg notes "$THIS_RELEASE_NOTES" '.[0].release_notes = $notes' updated-payload.json > updated-payload.tmp && mv updated-payload.tmp updated-payload.json
+          
+          # Step 5: Clean up temporary files
+          rm temp_release_notes.txt cleaned_release_notes.txt
+          
+          # Update the JSON payload with the release notes
+          # jq --arg notes "$THIS_RELEASE_NOTES" '.[0].release_notes = $notes' updated-payload.json > updated-payload.tmp && mv updated-payload.tmp updated-payload.json
           
           cat updated-payload.json
           
@@ -160,46 +175,31 @@ jobs:
           SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
           BASE_URL: ${{ secrets.ADOBE_EQP_API_URL }}
         run: |
-          #attempt=0
-          # max_attempts=3
 
           # Sleep and wait for malware check to finish
-          #sleep_duration=30
-          #sleep $sleep_duration
+          sleep_duration= 120
+          sleep $sleep_duration
           
-          #while [ $attempt -lt $max_attempts ]; do
-          
-            # Make the POST request and capture the response
-            response_body=$(curl -s -X POST \
-              -H "Authorization: Bearer $SESSION_TOKEN" \
-              -H "Content-Type: application/json" \
-              --data @updated-payload.json \
-              "${BASE_URL}/rest/v1/products/packages")
+          # Make the POST request and capture the response
+          response_body=$(curl -s -X POST \
+            -H "Authorization: Bearer $SESSION_TOKEN" \
+            -H "Content-Type: application/json" \
+            --data @updated-payload.json \
+            "${BASE_URL}/rest/v1/products/packages")
 
-            if [ -n "response_body" ]; then
-              echo "Response body: $response_body"  # For debugging
-              
-              # Extract the "code" field from the JSON response
-              code=$(echo "$response_body" | jq -r '.[0].code // empty')
+          if [ -n "response_body" ]; then
+            echo "Response body: $response_body"  # For debugging
             
-              if [ -n "$code" ]; then
-                echo "$code"
-                #echo "Attempt = $attempt"
-                if [ "$code" -eq 1321 ]; then
-                  echo "The package is submitted as a draft and waiting for malware check."
-                fi
-              fi    
+            # Extract the "code" field from the JSON response
+            code=$(echo "$response_body" | jq -r '.[0].code // empty')
+          
+            if [ -n "$code" ]; then
+              echo "$code"
               
-             # attempt=$((attempt + 1))
-             # if [ $attempt -lt $max_attempts ]; then
-             #   sleep $sleep_duration
-             # else
-             #   echo "Failed to submit after $max_attempts attempts"
-             #   exit 1
-             # fi
-            else
-              echo "SUCCESS"
-              exit 1
-            fi 
-            
-          #done
+              if [ "$code" -eq 1321 ]; then
+                echo "The package is submitted as a draft and waiting for malware check."
+              fi
+            fi    
+          else
+            echo "SUCCESS"
+          fi 
